--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 header:
   - title: Music Videos
     url: /music-videos/
+  - title: Commercials
+    url: /commercials/
+  - title: Films
+    url: /films/
   - title: Press
     url: /press/
   - title: Contact
