--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "aos": "^2.3.4",
     "foundation-sites": "^6.5.1",
+    "gsap": "^2.1.3",
     "jquery": ">=3.0.0",
     "lightgallery": "^1.6.12",
     "motion-ui": "~2.0.0",
+    "swup": "^2.0.5",
     "what-input": "^5.1.2"
   },
   "private": true
