--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "email": "info@garethjohnsdesign.com"
   },
   "dependencies": {
+    "@swup/scripts-plugin": "^1.0.1",
     "aos": "^2.3.4",
     "foundation-sites": "^6.5.1",
     "gsap": "^2.1.3",
