--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ collections:
   commercials:
     title: Commercials
     output: true
+  films:
+    title: Films
+    output: true
 defaults:
 url: https://www.steveannisdop.com
 description: Award-winning Director of Photography
@@ -32,12 +35,6 @@ plugins:
 - jekyll-sitemap
 - jekyll-feed
 - jekyll/imgix
-markdown: kramdown
-kramdown:
-  auto_ids: false
-  input: GFM
-  hard_wrap: false
-highlighter: rouge
 email: hello@steveannisdop.com
 job: Director of Photography
 analytics: 
@@ -58,8 +55,8 @@ pagination:
   enabled: true
   per_page: 6
   limit: 0
-  permalink: "/:num/"
-  title: ":title — :num of :max"
+  permalink: "/page/:num/"
+  title: ":title - page :num"
   sort_field: date
   sort_reverse: true
 autopages:
