--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "foundation-sites": "^6.5.1",
     "gsap": "^2.1.3",
     "jquery": ">=3.0.0",
+    "lg-fullscreen": "^1.1.0",
+    "lg-video": "^1.2.2",
     "lightgallery": "^1.6.12",
     "motion-ui": "~2.0.0",
     "swup": "^2.0.5",
