--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ pagination:
   per_page: 12
   limit: 0
   permalink: "/page/:num/"
-  title: ":title - page :num"
+  title: ":title"
   sort_field: date
   sort_reverse: true
 autopages:
