--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ url: https://www.steveannisdop.com
 description: Award-winning Director of Photography
 permalink: pretty
 exclude:
+- Gemfile.lock
 - bower.json
 - package.json
 - config.codekit3
