--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "repository": {},
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "@swup/body-class-plugin": "^1.0.2",
     "@swup/ga-plugin": "^1.0.1",
     "@swup/head-plugin": "^1.0.2",
